--- a/src/app/configuracion/config.component.html
+++ b/src/app/configuracion/config.component.html
@@ -135,7 +135,7 @@
                           </div>
             </div>
             <!--Agregar Catalogo-->
-            <div class="row" *ngIf="catalgos" hidden>
+            <div class="row" *ngIf="catalgos">
               <div class="col-12">
                 <div class="card">
                   <div class="card-body">
@@ -154,7 +154,7 @@
                             {{ tipoDoc.documentacion | uppercase }}
                             </option>-->
                           </select>
-                          <label for="opcionesCatalogo">Permisos</label>
+                          <label for="opcionesCatalogo">Cátalogo</label>
                         </div>
                       </div>
                       <div class="col-1 mt-3">
