--- a/src/app/proyectos/proyectos.component.html
+++ b/src/app/proyectos/proyectos.component.html
@@ -216,7 +216,7 @@
                         <button  class="btn btn-primary" hidden>
                             Guardar Cambio
                         </button>
-                        <button (click)="cerrarSemana()" class="btn btn-success buttonM" data-toggle="modal" data-target="#exampleConfirmacion">
+                        <button (click)="cerrarSemana()" class="btn btn-success buttonM" hidden data-toggle="modal" data-target="#exampleConfirmacion">
                             Cerrar Seman
                         </button>
                     </div>
