--- a/src/app/configuracion/config.component.html
+++ b/src/app/configuracion/config.component.html
@@ -484,7 +484,9 @@
                           <div class="row">
                             <div class="col-12">
                               <div class="form-floating">
-                                <input type="text" value="{{ nombreEditar }}" class="form-control" id="nombreDependencia" />
+                                <input type="text" value="{{ nombreEditar }}" [(ngModel)]="nombreEditar" 
+                                  (ngModelChange)="change('dep', idEditar, nombreEditar, apellidoEditar, statusEditar)"
+                                  class="form-control" id="nombreDependencia" />
                                 <label for="fecFin">Nombre</label> 
                               </div>
                             </div>
@@ -514,8 +516,8 @@
                               <div class="form-floating">
                                 <select class="form-select" id="opcionesCatalogo"name="opcionesCatalogo">
                                   <option value="" selected disabled>{{ statusEditar }}</option>
-                                  <option value="1">Activo</option>
-                                  <option value="0">Desactivado</option>
+                                  <option value="true">Activo</option>
+                                  <option value="false">Desactivado</option>
                                 </select>
                                 <label for="fecFin">Status</label> 
                               </div>
@@ -530,8 +532,8 @@
               <button type="button" data-dismiss="modal" class="btn btn-secondary" >
                   Cerrar
               </button>
-              <button type="button" class="btn btn-primary mx-2">
-                  Guardar Tarea
+              <button type="button" (click)="guardarEdicion(tipoEdit, idEditar, nombreEditar, apellidoEditar, statusEditar)" class="btn btn-primary mx-2">
+                  Guardar
               </button>
           </div>
       </div>
