--- a/src/app/proyectos/proyectos.component.html
+++ b/src/app/proyectos/proyectos.component.html
@@ -191,7 +191,7 @@
                                             </select>
                                         </td>
                                         <td class="text-center">
-                                            <button (click)="getDocumentacion(proyecto.proyectoResponse.idProyecto)" class="btn btn-sm btn-success" data-toggle="modal" data-target="#exampleModalComentariosGerencia">
+                                            <button (click)="getDocumentacion(proyecto.proyectoResponse.idProyecto, listaProyectos[i].detalleProyectoResponse.comentario)" class="btn btn-sm btn-success" data-toggle="modal" data-target="#exampleModalComentariosGerencia">
                                                 ...
                                             </button>
                                         </td>
@@ -241,7 +241,7 @@
                                     <div  class="row">
                                         <div  class="col-12">
                                             <div  class="form-floating">
-                                                <textarea  type="text" id="idDatasource" placeholder="ID" value="1"
+                                                <textarea  type="text" id="idDatasource" placeholder="ID"  value="{{ comentario }}"
                                                     class="form-control ng-valid ng-dirty ng-touched" style="height: 120px;" >
                                                 </textarea>
                                             </div>
@@ -303,7 +303,9 @@
                                                     <tbody>
                                                         <tr *ngFor="let documentar of listaObjetivos; let i = index">
                                                             <td>
-                                                                <input type="checkbox">
+                                                                <!-- 
+                                                                <input type="number" min="0" class="form-control"  value="{{ proyecto.detalleProyectoResponse.hrsAtencion }}"  [(ngModel)]="listaProyectos[i].detalleProyectoResponse.hrsAtencion" (ngModelChange)="change(listaProyectos[i])">-->
+                                                                <input type="checkbox" value="{{ documentar.status }}" [(ngModel)]="listaObjetivos[i].status" (ngModelChange)="guardarDocumentarAvanceEdit(documentar.idObjetivo, listaObjetivos[i])">
                                                             </td>
                                                             <td>{{ documentar.objetivo }}</td>
                                                             <td>
