--- a/src/app/configuracion/config.component.html
+++ b/src/app/configuracion/config.component.html
@@ -473,74 +473,68 @@
 <div class="modal fade" id="exampleModalEditar" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" *ngIf="modalEditar">
   <div class="modal-dialog modal-lg" role="document" >
       <div class="modal-content">
-          <div class="modal-header">
-              <h5 id="exampleModalLabel" class="modal-title">Editar {{ tituloEditar }}</h5>
-              <button type="button" data-dismiss="modal" aria-label="Close" class="close border">
-                  <span aria-hidden="true">×</span>
-              </button>
-          </div>
-          <div class="modal-body">
-              <br>
-              <div>
-                  <div  class="row mt-6">
-                    <div class="col-6">
-                      <div class="card">
-                        <div class="card-body">
-                          <div class="row">
-                            <div class="col-12">
-                              <div class="form-floating">
-                                <input type="text" value="{{ nombreEditar }}" [(ngModel)]="nombreEditar" 
-                                  (ngModelChange)="change(tipoEdit, idEditar, nombreEditar, apellidoEditar, statusEditar)"
-                                  class="form-control" id="nombreDependencia" />
-                                <label for="fecFin">Nombre</label> 
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-6"  *ngIf="usuarios">
-                      <div class="card">
-                        <div class="card-body">
-                          <div class="row">
-                            <div class="col-12">
-                              <div class="form-floating">
-                                <input type="text" value="{{ apellidoEditar }}" class="form-control" id="nombreDependencia" />
-                                <label for="fecFin">Apellido</label> 
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-6">
-                      <div class="card">
-                        <div class="card-body">
-                          <div class="row">
-                            <div class="col-12">
-                              <div class="form-floating">
-                                <select class="form-select" id="opcionesCatalogo"name="opcionesCatalogo">
-                                  <option value="" selected disabled>{{ statusEditar }}</option>
-                                  <option value="true">Activo</option>
-                                  <option value="false">Desactivado</option>
-                                </select>
-                                <label for="fecFin">Status</label> 
-                              </div>
-                            </div>
-                          </div>
+        <div class="modal-header">
+          <h5 id="exampleModalLabel" class="modal-title">Editar {{ tituloEditar }}</h5>
+          <button type="button" data-dismiss="modal" aria-label="Close" class="close border">
+            <span aria-hidden="true">×</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <br>
+          <div>
+            <div  class="row mt-6">
+              <div class="col-6">
+                <div class="card">
+                  <div class="card-body">
+                    <div class="row">
+                      <div class="col-12">
+                        <div class="form-floating">
+                          <input type="text" value="{{ nombreEditar }}" [(ngModel)]="nombreEditar" 
+                            (ngModelChange)="guardarEdicion(tipoEdit, idEditar, nombreEditar, apellidoEditar, statusEditar)"
+                            class="form-control" id="nombreDependencia" />
+                          <label for="fecFin">Nombre</label> 
                         </div>
                       </div>
                     </div>
                   </div>
-                  <br>
+                </div>
               </div>
-              <button type="button" data-dismiss="modal" class="btn btn-secondary" >
-                  Cerrar
-              </button>
-              <button type="button" (click)="guardarEdicion(tipoEdit, idEditar, nombreEditar, apellidoEditar, statusEditar)" class="btn btn-primary mx-2">
-                  Guardar
-              </button>
+              <div class="col-6"  *ngIf="usuarios">
+                <div class="card">
+                  <div class="card-body">
+                    <div class="row">
+                      <div class="col-12">
+                        <div class="form-floating">
+                          <input type="text" value="{{ apellidoEditar }}" class="form-control" id="nombreDependencia" />
+                          <label for="fecFin">Apellido</label> 
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-6">
+                <div class="card">
+                  <div class="card-body">
+                    <div class="row">
+                      <div class="col-12">
+                        <div class="form-floating">
+                          <select class="form-select" id="opcionesCatalogo"name="opcionesCatalogo">
+                            <option value="" selected disabled>{{ statusEditar }}</option>
+                            <option value="true">Activo</option>
+                            <option value="false">Desactivado</option>
+                          </select>
+                          <label for="fecFin">Status</label> 
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <br>
           </div>
+        </div>
       </div>
   </div>
 </div>
