--- a/src/app/tickets/tickets.component.html
+++ b/src/app/tickets/tickets.component.html
@@ -1,4 +1,4 @@
-<div class="row" hidden>
+<div class="row">
   <div class="col-12 mb-5">
       <div class="card">
           <div class="card-body">
@@ -11,12 +11,12 @@
                               <div class="row">
                                   <div class="col-2">
                                       <div class="form-floating">
-                                          <input type="file" class="form-control" id="file"/>
+                                          <input type="file" class="form-control" id="file" (change)="selectFiles($event)"/>
                                           <label for="file">Cargar Archivo</label>
                                       </div>
                                   </div>
                                   <div class="col-1 mt-3">
-                                      <button class="btn btn-primary" >Agregar</button>
+                                      <button class="btn btn-primary" [disabled]="!selectedFiles" (click)="cargaTickets()">Agregar</button>
                                   </div>
                               </div>
                           </div>
